--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwXeZkFnPc4pPXRmBNuFBW",
+      "authorship_tag": "ABX9TyOqYuZ9zdo43xZ7oBEVmexK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/mvzurita10/hola_mundo_/blob/main/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "h0wgPdKtAEdx"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -79,10 +70,30 @@
         "print(resultado)"
       ],
       "metadata": {
-        "id": "EkiHJyXrEBcy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EkiHJyXrEBcy",
+        "outputId": "dc1e898c-b2bd-4527-b281-209d0346ddde"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**** Bienvenido al juego de Dados **** \n",
+            "--------------------------------------\n",
+            "Ingresa tu nombre: Miky\n",
+            "Ingresa tu nombre: Josue \n",
+            "Miky, presiona Enter para lanzar el dado.\n",
+            "Miky, sacaste 5\n",
+            "Josue , presiona Enter para lanzar el dado.\n",
+            "Josue , sacaste 5\n",
+            "Miky y Josue  empataron\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
