--- a/Ejericicios_Python.ipynb
+++ b/Ejericicios_Python.ipynb
@@ -73,10 +73,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EkiHJyXrEBcy",
-        "outputId": "dc1e898c-b2bd-4527-b281-209d0346ddde"
+        "id": "OVbB9EHZP9cS",
+        "outputId": "ef078fa3-87c4-43f9-9dbd-10be48e42e41"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,13 +84,13 @@
           "text": [
             "**** Bienvenido al juego de Dados **** \n",
             "--------------------------------------\n",
-            "Ingresa tu nombre: Miky\n",
-            "Ingresa tu nombre: Josue \n",
-            "Miky, presiona Enter para lanzar el dado.\n",
-            "Miky, sacaste 5\n",
-            "Josue , presiona Enter para lanzar el dado.\n",
-            "Josue , sacaste 5\n",
-            "Miky y Josue  empataron\n"
+            "Ingresa tu nombre: Miky \n",
+            "Ingresa tu nombre: Alan \n",
+            "Miky , presiona Enter para lanzar el dado.\n",
+            "Miky , sacaste 6\n",
+            "Alan , presiona Enter para lanzar el dado.\n",
+            "Alan , sacaste 3\n",
+            "El ganador es Miky \n"
           ]
         }
       ]
@@ -126,7 +126,7 @@
         "id": "oofp3ZDVH98X",
         "outputId": "e0a4b5bf-8f3d-425b-8372-7533ca1ac8bd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
