Se creó con Colab

--- a/Ejericicios_Python.ipynb
+++ b/Ejericicios_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqYuZ9zdo43xZ7oBEVmexK",
+      "authorship_tag": "ABX9TyOO/rghs/zVY4z7Q+H+cUbY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "#Ejericios en Python\n",
         "\n",
         "##Ejercicio 1:\n",
-        "Simula un juego de dados entre dos jugadores. Mostrara quien gana y si es que los jugadores empatan.\n",
+        "Simula un juego de dados entre dos jugadores. Mostrara quien gana y si es que existe un empate entre los jugadores.\n",
         "\n"
       ],
       "metadata": {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OVbB9EHZP9cS",
-        "outputId": "ef078fa3-87c4-43f9-9dbd-10be48e42e41"
+        "outputId": "f03007ec-c75d-4450-8946-d7dad243272b"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,12 +85,12 @@
             "**** Bienvenido al juego de Dados **** \n",
             "--------------------------------------\n",
             "Ingresa tu nombre: Miky \n",
-            "Ingresa tu nombre: Alan \n",
+            "Ingresa tu nombre: Josue \n",
             "Miky , presiona Enter para lanzar el dado.\n",
-            "Miky , sacaste 6\n",
-            "Alan , presiona Enter para lanzar el dado.\n",
-            "Alan , sacaste 3\n",
-            "El ganador es Miky \n"
+            "Miky , sacaste 4\n",
+            "Josue , presiona Enter para lanzar el dado.\n",
+            "Josue , sacaste 4\n",
+            "Miky  y Josue  empataron\n"
           ]
         }
       ]
@@ -98,8 +98,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Ejercicio 2:\n",
-        "Este codigo nos permite ingresar dos valores y al sumarlos no dira si la suma es mayor o no es mayor que 10"
+        "##Ejercicio 2:\n",
+        "Este codigo simula un juego de piedra, papel o tijera siendo una competencia entre tu (el usuario) y la computadora."
       ],
       "metadata": {
         "id": "mQPhdtt9H0kA"
@@ -108,34 +108,138 @@
     {
       "cell_type": "code",
       "source": [
-        "a = int(input(\"Ingrese el valor 1: \"))\n",
-        "b = int(input(\"Ingrese el valor 2: \"))\n",
-        "resultado= a+b\n",
+        "import random\n",
         "\n",
-        "print(\"La suma es : \", resultado)\n",
+        "print(\"Bienvenido al juego piedra, papel o tijera. \\nPara PIEDRA digite 1  \\nPara PAPEL digite 2  \\nPara TIJERA digite 3\")\n",
         "\n",
-        "if resultado > 10:\n",
-        "    print(\"La suma es mayor a 10\")\n",
-        "else:\n",
-        "    print(\"La suma no es mayor que 10\")"
+        "while True:\n",
+        "    print (\"\")\n",
+        "    jugador = int (input(\"Escoja una opcion: \"))\n",
+        "    if jugador == 1:\n",
+        "        print (\"\\nERES PIEDRA\")\n",
+        "        break\n",
+        "    elif jugador == 2:\n",
+        "        print (\"\\nERES PAPEL\")\n",
+        "        break\n",
+        "    elif jugador == 3:\n",
+        "        print(\"\\nERES TIJERA\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"ELIJE UN NUMERO DEL 1 AL 3 \")\n",
+        "\n",
+        "computadora = random.randint (1,3)\n",
+        "if computadora == 1:\n",
+        "    print (\"\\nLA COMPUTADORA HA SACADO PIEDRA\")\n",
+        "elif computadora == 2:\n",
+        "    print (\"\\nLA COMPUTADORA HA SACADO PAPEL\")\n",
+        "elif computadora == 3:\n",
+        "    print (\"\\nLA CMPUTADORA HA SACADO TIJERA\")\n",
+        "\n",
+        "print (\"\")\n",
+        "if jugador ==1 and computadora == 1:\n",
+        "    print(\"NO GANA NADIE\")\n",
+        "elif jugador ==2 and computadora ==2:\n",
+        "    print(\"NO GANA NAIDE\")\n",
+        "elif jugador ==3 and computadora ==3:\n",
+        "    print(\"NO GANA NADIE\")\n",
+        "\n",
+        "elif jugador ==1 and computadora ==2:\n",
+        "    print(\"CPU WINS!!\")\n",
+        "elif jugador ==2 and computadora ==3:\n",
+        "    print(\"CPU WINS!!\")\n",
+        "elif jugador ==3 and computadora ==1:\n",
+        "    print(\"CPU WINS!!\")\n",
+        "\n",
+        "elif jugador ==1 and computadora ==3:\n",
+        "    print(\"Eso es!! Le ganaste a un invento poderoso\")\n",
+        "elif jugador ==2 and computadora ==1:\n",
+        "    print(\"Eso es!! Le ganaste a un invento poderoso\")\n",
+        "elif jugador ==3 and computadora ==2:\n",
+        "    print(\"Eso es!! Le ganaste a un invento poderoso\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oofp3ZDVH98X",
-        "outputId": "e0a4b5bf-8f3d-425b-8372-7533ca1ac8bd"
+        "id": "4egyDCXRWBTP",
+        "outputId": "571582b7-0e5c-4076-bbf1-b3227a27dc13"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese el valor 1: 1\n",
-            "Ingrese el valor 2: 2\n",
-            "La suma es :  3\n",
-            "La suma no es mayor que 10\n"
+            "Bienvenido al juego piedra, papel o tijera. \n",
+            "Para PIEDRA digite 1  \n",
+            "Para PAPEL digite 2  \n",
+            "Para TIJERA digite 3\n",
+            "\n",
+            "Escoja una opcion: 3\n",
+            "\n",
+            "ERES TIJERA\n",
+            "\n",
+            "LA COMPUTADORA HA SACADO PIEDRA\n",
+            "\n",
+            "CPU WINS!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Ejercicio 3:\n",
+        "Este programa nos servira para comprobar si aprueba o no dependiendo de las notas y asistencia del estudiante"
+      ],
+      "metadata": {
+        "id": "NXsp_cx_YBnq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nota_examen = input(\"Ingrese su nota del examen (valores permitidos del 1 al 10): \")\n",
+        "\n",
+        "try:\n",
+        "    nota_examen = int(nota_examen)\n",
+        "    if 1 <= nota_examen <= 10:\n",
+        "        print(\"Es una nota válida.\")\n",
+        "        inasistencias = input(\"¿Cuántas veces ha faltado a clases? \")\n",
+        "        try:\n",
+        "            inasistencias = int(inasistencias)\n",
+        "            if inasistencias < 3 and nota_examen >= 8:\n",
+        "                print(\"APROBADO\")\n",
+        "            else:\n",
+        "                print(\"REPROBADO\")\n",
+        "\n",
+        "        except ValueError:\n",
+        "            print(\"El número de inasistencias debe ser un valor numérico.\")\n",
+        "    else:\n",
+        "        print(\"Solo se permiten notas entre 1 y 10.\")\n",
+        "except ValueError:\n",
+        "    print(\"Por favor, ingrese un número válido.\")\n",
+        "\n",
+        "print(\"FIN DEL PROGRAMA\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eOU41DdpYPJG",
+        "outputId": "0826721e-c531-47bb-9c35-b092f2c6f917"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese su nota del examen (valores permitidos del 1 al 10): 9\n",
+            "Es una nota válida.\n",
+            "¿Cuántas veces ha faltado a clases? 1\n",
+            "APROBADO\n",
+            "FIN DEL PROGRAMA\n"
           ]
         }
       ]
