--- a/Ejericicios_Python.ipynb
+++ b/Ejericicios_Python.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Ejericios en Python\n",
+        "#Ejercicios en Python\n",
         "\n",
         "##Ejercicio 1:\n",
         "Simula un juego de dados entre dos jugadores. Mostrara quien gana y si es que existe un empate entre los jugadores.\n",
